@@ -1,3 +1,4 @@
+ - add login filter unit tests
  - fix referral applications SQL select
  - #84 add 'jobIds' and 'userIds' to referral list filters
  - #81 fix SQL author reliability ratio equation
